fix: try fixing overflowx hidden again

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 @layer base {
-  html {
+  html,
+  body {
     font-family: "Inter", system-ui, sans-serif;
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
